--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/ct/Local Downloads/buildtools/Spigot/Spigot-Server/target/spigot-1.8.8-R0.1-SNAPSHOT.jar" sourcepath="C:/Users/ct/Local Downloads/buildtools/Spigot/Spigot-Server/target/spigot-1.8.8-R0.1-SNAPSHOT.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="https://hub.spigotmc.org/javadocs/spigot/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
